--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -3,29 +3,13 @@
         <div id="mobilemenu">
             <!-- <a href="#" id="mobile-mainmenu-button" class="ir">Main Menu</a>
             <a href="#" id="mobile-searchbutton" class="ir">Search</a> -->
-            <span><a href="/">GOED | Utah Business Relocation Map</a></span>
+            <span>GOED | Utah Business Relocation Map</span>
         </div>
     
         <div id="header-wrapper" class="site-full">
             <div id="header" class="site">
                 <span id="broadband-logo" class="ir"></span>
-    
-                <div id="locationSummary">
-                    <h4>Current Location</h4>
-                    <div class="clearfix"></div>
-    
-                    <div class="address left">
-                        <ul>
-                            <li>3200 West 6100 South</li>
-                            <li>Taylorsville, UT 84129</li>
-                            <li>Salt Lake County</li>
-                        </ul>
-                    </div>
-    
-                    <div class="address2 right">
-                        <a href="#" class="button yellow">Print Summary</a>
-                    </div>
-                </div>
+                <div data-dojo-attach-point="currentLocationDiv"></div>
             </div>
         </div>
     
@@ -43,12 +27,6 @@
                         <form id="cse-search-box" action="">
                             <input type="text" name="q">
                             <input class="searchButton gray-v ir" type="submit" name="sa" id="sa" value="Search">
-                            <input type="hidden" value="011332109034691905717:gtynohz2vcc" name="cx">
-                            <input type="hidden" value="FORID:10" name="cof">
-                            <input type="hidden" value="UTF-8" name="ie">
-                            <input type="hidden" name="siteurl" value="">
-                            <input type="hidden" name="ref">
-                            <input type="hidden" name="ss">
                         </form>
                     </div>
                     <p></p>
@@ -99,17 +77,17 @@
     
     <div id="footer-wrapper" class="site-full">
         <div id="footer" class="site">
-            <div id="goed-logo" class="left"></div>
-            <div class="col35 left">
+            <div id="goed-logo" class="pull-left"></div>
+            <div class="col35 pull-left">
                 <p>Governor's Office of Economic Development (GOED)</p>
-                <div class="col left">
+                <div class="col pull-left">
                     <address>
                         271 West Bitterbrush Lane
                         <br /> Salt Lake City, Utah 84020
                     </address>
                 </div>
     
-                <div class="col right">
+                <div class="col pull-right">
                     <p>Phone: (801) 571-0900
                         <br /> Email: <a href="mailto:lonepeakfire@utah.gov">broadband@utah.gov</a>
                     </p>
@@ -117,7 +95,7 @@
                 <div class="clearfix"></div>
             </div>
     
-            <div class="col20 right">
+            <div class="col20 pull-right">
                 <ul>
                     <li><a href="http://www.utah.gov/main/index">Utah.gov</a></li>
                     <li><a href="http://www.utah.gov/disclaimer.html">Terms of Use</a></li>
