--- a/src/app/resources/App.css
+++ b/src/app/resources/App.css
@@ -1,4 +1,3 @@
-@import '../../bootstrap/dist/css/bootstrap.css';
+@import 'custom-bootstrap.css';
 @import '../../esri/css/esri.css';
 @import 'designer.css';
-
