--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -21,55 +21,7 @@
     <div id="content-wrapper" class="site-full clearfix">
         <div id="content" class="site-full">
             <div id="content-main" class="site">
-                <div id="layers">
-                    <p>Search by Location or Place</p>
-                    <div id="searchform_main">
-                        <form id="cse-search-box" action="">
-                            <input type="text" name="q">
-                            <input class="searchButton gray-v ir" type="submit" name="sa" id="sa" value="Search">
-                        </form>
-                    </div>
-                    <p></p>
-    
-                    <div id="reloLayers">
-                        <ul>
-                            <li class="broadband"><a href="#" id="broadband">Broadband</a>
-                                <ul>
-                                    <li>Broadband Fiber</li>
-                                    <li>Broadband Fiber in 9 months</li>
-                                </ul>
-                            </li>
-    
-                            <li class="utilities"><a href="#" id="utilities">Utilities</a>
-                                <ul>
-                                    <li>Natural Gas</li>
-                                    <li>Electrical Utilities</li>
-                                    <li>Telephone Utilities</li>
-                                    <li>Water Systems</li>
-                                </ul>
-                            </li>
-                            <li class="transportation"><a href="#" id="transportation">Transportation</a>
-                                <ul>
-                                    <li>Major Roads</li>
-                                    <li>Airports</li>
-                                </ul>
-                            </li>
-                            <li class="lifestyle"><a href="#" id="lifestyle">Lifestyle</a>
-                                <ul>
-                                    <li>National and State Parks</li>
-                                    <li>Ski Areas</li>
-                                    <li>Golf Courses</li>
-                                </ul>
-                            </li>
-                            <li class="demographics"><a href="#" id="demographics">Demographics</a>
-                                <ul>
-                                    <li>Higher Education</li>
-                                    <li>Enterprise Zones</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+                <div data-dojo-attach-point='layersDiv'></div>
                 <div class="clearfix"></div>
             </div>
         </div>
