--- a/src/app/resources/custom-bootstrap.less
+++ b/src/app/resources/custom-bootstrap.less
@@ -5,3 +5,10 @@
 
 @btn-default-border: darken(@btn-default-bg, 5%);
 @btn-primary-border: darken(@btn-primary-bg, 5%);
+
+/* this need to be changed because we are no longer in the default location */
+@icon-font-path: '../../bootstrap/fonts/';
+
+.layers .search input {
+    border-color: @btn-primary-border;
+}
