--- a/src/app/templates/Layers.html
+++ b/src/app/templates/Layers.html
@@ -1,13 +1,7 @@
 <div>
-    <p>Search by Location or Place</p>
-    <div id="searchform_main">
-        <form id="cse-search-box" action="">
-            <input type="text" name="q">
-            <input class="searchButton gray-v ir" type="submit" name="sa" id="sa" value="Search">
-        </form>
-    </div>
-    <p></p>
-    
+    <h4>Search by Location or Place</h4>
+
+    <div data-dojo-attach-point="searchDiv"></div>
     <ul>
         <li class="broadband">
             <a href='#broadbandList' data-toggle='collapse'>Broadband</a>
