fixed layout to allow mouse interactions with map

--- a/src/app/resources/App.css
+++ b/src/app/resources/App.css
@@ -3,8 +3,10 @@
 @import '../../agrc/resources/map/BaseMap.css';
 
 .map {
-    width: 100%;
-    height: 100%;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
     position: absolute;
 }
 .esriControlsBR {
@@ -36,8 +38,10 @@ body {
     padding: 10px;
     color: #fff;
 }
-.site-full {
+.site-full.clearfix {
     position: relative;
+}
+.site-full {
     width: 100%;
 }
 .site {
