--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -19,7 +19,7 @@
             <div data-dojo-attach-point="mapDiv" class='map'></div>
             <div class="site">
                 <div data-dojo-attach-point='layersDiv' class='layers'></div>
-                <div class="clearfix"></div>
+                <div class="clearfix hidden"></div>
             </div>
         </div>
     </div>
