--- a/src/app/templates/Layers.html
+++ b/src/app/templates/Layers.html
@@ -2,48 +2,5 @@
     <h4>Search by Location or Place</h4>
 
     <div data-dojo-attach-point="searchDiv"></div>
-    <ul>
-        <li class="broadband">
-            <a href='#broadbandList' class='toggle-layer' 
-                data-toggle='collapse' data-layers='0,1'>Broadband</a>
-            <ul id='broadbandList' class='collapse'>
-                <li>Broadband Fiber</li>
-                <li>Broadband Fiber in 9 months</li>
-            </ul>
-        </li>
-        <li class="utilities">
-            <a href="#utilitiesList" data-toggle='collapse'>Utilities</a>
-            <ul id='utilitiesList' class='collapse'>
-                <li>Natural Gas</li>
-                <li>Electrical Utilities</li>
-                <li>Telephone Utilities</li>
-            </ul>
-        </li>
-        <li class="transportation">
-            <a href="#transportationList" class='toggle-layer' 
-                data-toggle='collapse'>Transportation</a>
-            <ul id='transportationList' class='collapse'>
-                <li>Major Roads</li>
-                <li>Airports</li>
-            </ul>
-        </li>
-        <li class="lifestyle">
-            <a href="#lifestyleList" class='toggle-layer' 
-                data-toggle='collapse'>Lifestyle</a>
-            <ul id='lifestyleList' class='collapse'>
-                <li>National and State Parks</li>
-                <li>Ski Areas</li>
-                <li>Golf Courses</li>
-                <li>Trails</li>
-            </ul>
-        </li>
-        <li class="demographics">
-            <a href="#demographicsList" class='toggle-layer' 
-                data-toggle='collapse'>Demographics</a>
-            <ul id='demographicsList' class='collapse'>
-                <li>Higher Education</li>
-                <li>Enterprise Zones</li>
-            </ul>
-        </li>
-    </ul>
+    <ul data-dojo-attach-point='groupsContainer'></ul>
 </div>
