--- a/src/app/resources/Group.css
+++ b/src/app/resources/Group.css
@@ -7,47 +7,67 @@
 .group a:hover, .group a:focus {
     color: #fff;
 }
+.group {
+    position: relative;
+}
+.group>button {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 3px 7px;
+    margin: 12px;
+}
+.group>button:focus,
+.group>button:hover {
+    color: #fff;
+}
+.group>button .glyphicon {
+    top: 2px;
+}
 
-
+/* hide transparency buttons for layers that it doesn't apply to */
+.transportation>button,
+.utilities>button,
+.lifestyle>button,
+.demographics>button {
+    display: none;
+    visibility: hidden;
+}
 /* Colors for first level layer nav */
 .broadband.group {
-  background: #000000 url(img/icons/broadband.svg) 15px 15px no-repeat;
+    background: #000000 url(img/icons/broadband.svg) 15px 15px no-repeat;
 }
-
 .utilities.group {
-  background: #E09525 url(img/icons/utilities.svg) 15px 15px no-repeat;
+    background: #E09525 url(img/icons/utilities.svg) 15px 15px no-repeat;
 }
-
 .transportation.group {
-  background: #107A89 url(img/icons/transportation.svg) 15px 15px no-repeat;
+    background: #107A89 url(img/icons/transportation.svg) 15px 15px no-repeat;
 }
-
 .lifestyle.group {
-  background: #0D8C44 url(img/icons/lifestyle.svg) 15px 15px no-repeat;
+    background: #0D8C44 url(img/icons/lifestyle.svg) 15px 15px no-repeat;
 }
-
 .demographics.group {
-  background: #C22127 url(img/icons/demographics.svg) 15px 15px no-repeat;
+    background: #C22127 url(img/icons/demographics.svg) 15px 15px no-repeat;
 }
 
 /* Colors for second level layer nav */
-
-.broadband ul {
-  background-color: #333333;
+.broadband ul,
+.broadband>button {
+    background-color: #333333;
 }
-
-.utilities ul {
-  background-color: #AD6F29;
+.utilities ul,
+.utilities>button {
+    background-color: #AD6F29;
 }
-
-.transportation ul {
-  background-color: #0C5D63;
+.transportation ul,
+.transportation>button {
+    background-color: #0C5D63;
 }
-
-.lifestyle ul {
-  background-color: #0D6634;
+.lifestyle ul,
+.lifestyle>button {
+    background-color: #0D6634;
 }
-
-.demographics ul {
-  background-color: #9B1D21;
+.demographics ul,
+.demographics>button {
+    background-color: #9B1D21;
 }
