--- a/src/app/templates/Group.html
+++ b/src/app/templates/Group.html
@@ -3,4 +3,9 @@
         data-toggle='collapse' data-layers='0,1'>${name}</a>
     <ul id='${id}_sub' class='collapse'
         data-dojo-attach-point='layersContainer'></ul>
+    <button type='button' data-toggle="popover"
+        data-dojo-attach-point='popoverBtn'
+        class='btn pull-right'>
+        <span class="glyphicon glyphicon-adjust"></span>
+    </button>
 </li>
