Search by address.
Rel #2

--- a/src/app/resources/Search.css
+++ b/src/app/resources/Search.css
@@ -1,3 +1,8 @@
+@import '../../agrc/resources/locate/FindAddress.css';
 .search {
     margin: 10px 0;
+}
+.search .find-address label.control-label {
+    font-size: 14px;
+    font-weight: normal;
 }
