--- a/src/app/resources/App.css
+++ b/src/app/resources/App.css
@@ -60,6 +60,11 @@ h2, h3, h4 {
     margin: 0;
     padding: 0;
 }
+.btn,
+.btn:focus,
+.btn:hover {
+    color: #fff;
+}
 #header-container #header-wrapper {
     background: rgb(209, 210, 211);
     /* Old browsers */
