--- a/src/app/templates/Search.html
+++ b/src/app/templates/Search.html
@@ -1,10 +1,11 @@
 <div>
-    <div class="input-group">
+<!--<div class="input-group">
         <input type="text" class='form-control'>
         <span class="input-group-btn">
             <button class="btn btn-primary" type='button'>
                 <span class="glyphicon glyphicon-search"></span>
             </button>
         </span>
-    </div>
+    </div>-->
+    <div data-dojo-attach-point="findAddressDiv"></div>
 </div>
