Added MagicZoom widget.
Closes #2

--- a/src/app/templates/Search.html
+++ b/src/app/templates/Search.html
@@ -1,11 +1,4 @@
 <div>
-<!--<div class="input-group">
-        <input type="text" class='form-control'>
-        <span class="input-group-btn">
-            <button class="btn btn-primary" type='button'>
-                <span class="glyphicon glyphicon-search"></span>
-            </button>
-        </span>
-    </div>-->
     <div data-dojo-attach-point="findAddressDiv"></div>
+    <div data-dojo-attach-point="magicZoomDiv"></div>
 </div>
