--- a/src/app/templates/CurrentLocation.html
+++ b/src/app/templates/CurrentLocation.html
@@ -15,7 +15,8 @@
         </div>
         
         <div class="address2 pull-right">
-            <a href="#" class="btn btn-default">Print Summary</a>
+            <button href="#" class="btn btn-default"
+                data-dojo-attach-event='click: generateReport'>Get Summary</button>
         </div>
     </div>
 </div>
