--- a/src/app/templates/ReportTemplate.html
+++ b/src/app/templates/ReportTemplate.html
@@ -1,6 +1,6 @@
 <h3 class="broadband">Broadband</h3>
 <h4 class='broadband'>Fiber Providers</h4>
-<table>
+<table class='table'>
     <thead>
         <tr>
             <th>Provider</th>
@@ -25,7 +25,7 @@
     </tbody>
 </table>
 <h4 class="broadband">Other Fixed Broadband Providers</h4>
-<table>
+<table class='table'>
     <thead>
         <tr>
             <th>Provider</th>
@@ -50,7 +50,7 @@
 
 <h3 class="utilities">Utilities</h3>
 <h4 class="utilities">Rural Telecom</h4>
-<table>
+<table class='table'>
     <thead>
         <tr>
             <th>Provider</th>
@@ -73,7 +73,7 @@
     </tbody>
 </table>
 <h4 class="utilities">Electrical</h4>
-<table>
+<table class='table'>
     <thead>
         <tr>
             <th>Provider</th>
@@ -95,7 +95,7 @@
         {{/each}}
     </tbody>
 </table>
-<table>
+<table class='table'>
     <tbody>
         <td>
             Natural gas service: <strong>{{utilities.natural_gas}}</strong>
@@ -105,7 +105,7 @@
 
 <h3 class="transportation">Transportation</h3>
 <h4 class="transportation">Major Roads, Freeways, US Highways and State Highways within 5 Miles</h4>
-<table>
+<table class='table'>
     <thead>
         <tr>
             <th>Name</th>
@@ -120,7 +120,7 @@
     </tbody>
 </table>
 <h4 class="transportation">Airports - International</h4>
-<table>
+<table class='table'>
     <thead>
         <tr>
             <th>Name</th>
@@ -135,7 +135,7 @@
     </tbody>
 </table>
 <h4 class="transportation">Airports - Regional/Commercial</h4>
-<table>
+<table class='table'>
     <thead>
         <tr>
             <th>Name</th>
@@ -152,7 +152,7 @@
     </tbody>
 </table>
 <h4 class="transportation">Airports - Local</h4>
-<table>
+<table class='table'>
     <thead>
         <tr>
             <th>Name</th>
@@ -171,7 +171,7 @@
 
 <h3 class="demographics">Workforce</h3>
 <h4 class="demographics">Higher Education Schools</h4>
-<table>
+<table class='table'>
     <thead>
         <tr>
             <th>Name</th>
@@ -190,7 +190,7 @@
 
 <h3 class="lifestyle">Lifestyle/Recreation</h3>
 <h4 class="lifestyle">National Parks</h4>
-<table>
+<table class='table'>
     <thead>
         <tr>
             <th>Name</th>
@@ -208,7 +208,7 @@
 </table>
 
 <h4 class="lifestyle">State Parks</h4>
-<table>
+<table class='table'>
     <thead>
         <tr>
             <th>Name</th>
@@ -225,7 +225,7 @@
     </tbody>
 </table>
 <h4 class="lifestyle">Ski Resorts</h4>
-<table>
+<table class='table'>
     <thead>
         <tr>
             <th>Name</th>
