--- a/src/app/resources/CurrentLocation.css
+++ b/src/app/resources/CurrentLocation.css
@@ -6,7 +6,8 @@
 
 .current-location h4 {
     color: #fff;
-    padding-bottom: 15px;
+    padding: 0 0 15px 0;
+    margin: 0;
 }
 .current-location ul {
     font-size: .8em;
