--- a/src/app/resources/custom-bootstrap.less
+++ b/src/app/resources/custom-bootstrap.less
@@ -1,9 +1,28 @@
-@import '../../bootstrap/less/bootstrap.less';
+// @import '../../bootstrap/less/bootstrap.less';
+@import '../../bootstrap/less/alerts.less';
+@import '../../bootstrap/less/button-groups.less';
+@import '../../bootstrap/less/buttons.less';
+@import '../../bootstrap/less/close.less';
+@import '../../bootstrap/less/component-animations.less';
+@import '../../bootstrap/less/dropdowns.less';
+@import '../../bootstrap/less/forms.less';
+@import '../../bootstrap/less/glyphicons.less';
+@import '../../bootstrap/less/input-groups.less';
+@import '../../bootstrap/less/labels.less';
+@import '../../bootstrap/less/modals.less';
+@import '../../bootstrap/less/normalize.less';
+@import '../../bootstrap/less/popovers.less';
+@import '../../bootstrap/less/scaffolding.less';
+@import '../../bootstrap/less/tables.less';
+@import '../../bootstrap/less/theme.less';
+@import '../../bootstrap/less/type.less';
+@import '../../bootstrap/less/utilities.less';
+@import '../../bootstrap/less/variables.less';
 
-@btn-default-bg: #E09525;
+// @btn-default-bg: #E09525;
 @btn-primary-bg: #0C5D63;
 
-@btn-default-border: darken(@btn-default-bg, 5%);
+// @btn-default-border: darken(@btn-default-bg, 5%);
 @btn-primary-border: darken(@btn-primary-bg, 5%);
 
 /* this need to be changed because we are no longer in the default location */
