--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -22,6 +22,9 @@
                 <div class="clearfix hidden"></div>
             </div>
         </div>
+        <div class="site hidden" data-dojo-attach-point='reportContainer'>
+            <div data-dojo-attach-point="reportDiv"></div>
+        </div>
     </div>
     
     <div id="footer-wrapper" class="site-full">
