Added move layers.
Split up dynamic layers into layers by group.

--- a/src/app/resources/Group.css
+++ b/src/app/resources/Group.css
@@ -27,9 +27,7 @@
 
 /* hide transparency buttons for layers that it doesn't apply to */
 .transportation>button,
-.utilities>button,
-.lifestyle>button,
-.demographics>button {
+.lifestyle>button {
     display: none;
     visibility: hidden;
 }
