--- a/src/app/resources/App.css
+++ b/src/app/resources/App.css
@@ -122,6 +122,33 @@ body {
     display: none;
 }
 
+/* Spinner */
+.glyphicon-refresh {
+    -webkit-animation: spin 2s infinite linear;
+    animation: spin 2s infinite linear;
+    font-size: 14px;
+}
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg);
+    }
+}
+@keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg);
+    }
+}
+
 /* COLORS */
 /* Colors for first level layer nav */
 .broadband.group,
