--- a/src/app/tests/CurrentLocationTests.html
+++ b/src/app/tests/CurrentLocationTests.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="app/resources/App.css">
+    <link rel="stylesheet" href="../../app/resources/App.css">
     <style type='text/css'>
         body {
             padding: 50px;
@@ -22,7 +22,7 @@
 
         require({
             baseUrl: baseUrl,
-            packages: ['app', 'esri', 'dojo', 'dijit', 'dojox',
+            packages: ['app', 'esri', 'dojo', 'dijit', 'dojox', 'xstyle', 'agrc',
             {
                 name: 'jquery',
                 location: 'jquery/dist',
