--- a/src/app/templates/CurrentLocation.html
+++ b/src/app/templates/CurrentLocation.html
@@ -11,7 +11,7 @@
     <div data-dojo-attach-point="addressContainer" class='hidden'>
         <div class="address pull-left">
             <ul>
-                <li data-dojo-attach-point='addressNode'>3200 West 6100 South</li>
+                <li data-dojo-attach-point='addressNode'>3200 West 6100 South asdfasdf asdf asd fasd fasdf</li>
                 <li>
                     <span data-dojo-attach-point='cityNode'>Taylorsville</span>, UT <span data-dojo-attach-point="zipNode">84129</span>
                 </li>
