Added lines to commuter rail and updated label
Closes #24

--- a/src/app/templates/Layer.html
+++ b/src/app/templates/Layer.html
@@ -1,5 +1,5 @@
 <li class='checkbox'>
     <input type="checkbox" id='${id}_chbx'
-        data-dojo-attach-point='checkbox'>
+        data-dojo-attach-point='checkbox' value='${layerId}'>
     <label for='${id}_chbx' data-dojo-attach-point='label'>${name}</label>
 </li>
