Added "County" and cleaned up current location txt
Closes #32

--- a/src/app/templates/CurrentLocation.html
+++ b/src/app/templates/CurrentLocation.html
@@ -11,11 +11,11 @@
     <div data-dojo-attach-point="addressContainer" class='hidden'>
         <div class="address pull-left">
             <ul>
-                <li data-dojo-attach-point='addressNode'>3200 West 6100 South asdfasdf asdf asd fasd fasdf</li>
+                <li data-dojo-attach-point='addressNode'></li>
                 <li>
-                    <span data-dojo-attach-point='cityNode'>Taylorsville</span>, UT <span data-dojo-attach-point="zipNode">84129</span>
+                    <span data-dojo-attach-point='cityNode'></span>, UT <span data-dojo-attach-point="zipNode"></span>
                 </li>
-                <li data-dojo-attach-point='countyNode'>Salt Lake County</li>
+                <li><span data-dojo-attach-point='countyNode'></span> County</li>
             </ul>
         </div>
         
