Radio button checked state after build
Fixed a bug causing radio buttons to not show their checked state after a build.

Closes #39

--- a/src/app/resources/Layer.css
+++ b/src/app/resources/Layer.css
@@ -10,10 +10,16 @@
     font-size: 9px;
 }
 
-/* needed for built version */
+/* following two rules are needed for built version */
+/* possibly a bug in xstyle? */
 .layer.checkbox input[type='checkbox'] {
     opacity: 0;
 }
+.layer.radio input:checked + label::after {
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
+}
+
 
 .esriPopup .content .contentPane {
     border-top-left-radius: 5px;
