Report now opens in a new tab/window
Closes #21

--- a/src/app/templates/CurrentLocation.html
+++ b/src/app/templates/CurrentLocation.html
@@ -20,8 +20,8 @@
         </div>
         
         <div class="address2 pull-right">
-            <button href="#" class="btn btn-default"
-                data-dojo-attach-event='click: generateReport'>Get Summary</button>
+            <a href="#" class="btn btn-default" target="_blank"
+                data-dojo-attach-point='getSummaryLink'>Get Summary</a>
         </div>
     </div>
 </div>
